- Fixed duplicity process creation - Added JfileChooser to save extracted files